--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <h1>Masa Lalu</h1>
-<h2>Hai</h2>
-<h3 style="color:blue;">Kamu</h3>
+<h2>Hai Kamu</h2>
+<h3 style="color:blue;">Masih ingat utangmu kah kawan?</h3>
 
-<p>apakah <b><i>masih sendiri </i></b>?<h/4>
-<h5><marquee> Aku masih disini<marquee>
+<p>apakah <b><i>masih bilang tidak ada uang? </i></b>?<h/4>
+<h5><marquee> Aku masih menunggumu untuk membayar utangmu<marquee>
 
-<a href="www.github.com"> Klik disini</a>
+<h6><a href="www.github.com"> Klik disini untuk membayar</a><h/6>
