--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
 <p>apakah <b><i>masih bilang tidak ada uang? </i></b>?<h/4>
 <h5><marquee> Aku masih menunggumu untuk membayar utangmu<marquee>
 
-<h6><a href="www.github.com"> Klik disini untuk membayar</a><h/6>
+<a href="www.github.com"> Klik disini untuk membayar</a>
