--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h2>Hai Kamu</h2>
 <h3 style="color:blue;">Masih ingat utangmu kah kawan?</h3>
 
-<p>apakah <b><i>masih bilang tidak ada uang? </i></b>?<h/4>
+<p>apakah <b><i>masih bilang tidak ada uang </i></b>?<h/4>
 <h5><marquee> Aku masih menunggumu untuk membayar utangmu<marquee>
 
 <a href="www.github.com"> Klik disini untuk membayar</a>
