--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <h1>Masa Lalu</h1>
 <h2>Hai Kamu</h2>
 <h3 style="color:blue;">Masih ingat utangmu kah kawan?</h3>
+<p>apakah <b><i>masih bilang tidak ada uang <h/4>
 
-<p>apakah <b><i>masih bilang tidak ada uang </i></b>?<h/4>
-<h5><marquee> Aku masih menunggumu untuk membayar utangmu<marquee>
+<marquee>Aku masih menunggumu untuk membayar utangmu<marquee>
 
 <a href="www.github.com"> Klik disini untuk membayar</a>
+<br>
+
+<img src="https://assets.pikiran-rakyat.com/crop/0x0:0x0/x/photo/2022/02/05/4196335095.jpg">
+<br>
+Raja Bajak Laut<br>
+Monkey D. Luffy
